Добавлены тесты и проведены тесты для конвеера-очереди

--- a/UniTest/UniTest.csproj
+++ b/UniTest/UniTest.csproj
@@ -14,6 +14,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\ConveyorApp\ConveyorApp.csproj" />
     <ProjectReference Include="..\NetApi\NetApi.csproj" />
   </ItemGroup>
 
