--- a/ConveyorGui/ConveyorGui.csproj
+++ b/ConveyorGui/ConveyorGui.csproj
@@ -6,4 +6,8 @@
     <UseWindowsForms>true</UseWindowsForms>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\NetApi\NetApi.csproj" />
+  </ItemGroup>
+
 </Project>
